--- a/Natours/starter/sass/layout/_navigation.scss
+++ b/Natours/starter/sass/layout/_navigation.scss
@@ -12,6 +12,9 @@
     top: 6rem;
     right: 6rem;
     z-index: 2000;
+    box-shadow: 0 1rem 3rem rgba($color-black, 0.4);
+
+    text-align: center;
   }
 
   &__background {
@@ -26,17 +29,21 @@
       $color-primary-dark
     );
     z-index: 1000;
-
-    transform: scale(80);
+    transition: all 1s cubic-bezier(0.86, 0, 0.07, 1);
+    //transform: scale(80);
   }
 
   &__nav {
     height: 100vh;
-    width: 100%;
     position: fixed;
     top: 0;
     right: 0;
     z-index: 1500;
+
+    width: 0;
+    opacity: 0;
+
+    transition: all 1s cubic-bezier(1, 1.55, 0, 0.61);
   }
 
   &__list {
@@ -46,6 +53,9 @@
     transform: translate(-50%, -50%);
     list-style: none;
     text-align: center;
+
+    // Needed For 'Slide Transition Effect'
+    width: 100%;
   }
 
   &__item {
@@ -71,13 +81,75 @@
       transition: all 0.5s;
     }
     span {
-        margin-right: 1rem;
+      margin-right: 1.5rem;
+      display: inline-block;
     }
 
-    &:hover {
+    &:hover,
+    &:active {
       color: $color-primary;
       transform: translateX(1rem);
       background-position: 100%;
     }
+  }
+
+  //Functionality
+  &__checkbox:checked ~ &__background {
+    transform: scale(80);
+  }
+
+  &__checkbox:checked ~ &__nav {
+    width: 100vw;
+    opacity: 100;
+  }
+
+  //Icon
+  &__icon {
+    position: relative;
+    margin-top: 3.5rem;
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 2px;
+      background-color: $color-grey-dark-3;
+      display: inline-block;
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      transition: all .2s;
+    }
+
+    &::before {
+      top: -1rem;
+    }
+    &::after {
+      top: 1rem;
+    }
+  }
+
+  &__button:hover &__icon::before {
+    top: -1.25rem;
+  }
+
+  &__button:hover &__icon::after {
+    top: 1.25rem;
+  }
+
+  &__checkbox:checked + &__button &__icon {
+    background-color: transparent;
+  }
+
+  &__checkbox:checked + &__button &__icon::before {
+      top: 0;
+transform: rotate(-135deg);  }
+
+  &__checkbox:checked + &__button &__icon::after {
+      top: 0;
+      transform: rotate(135deg);
   }
 }
